k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opsci-ingress
  namespace: opsci

spec:
  rules:
  - host: opsci.local
    http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
